# mapreducer

./: .gitignore  CMakeLists.txt
.github/workflows/: bigdata.yaml
include/: file_preparation.h  map_reduce.h
src/: file_preparation.cpp  main.cpp  map_reduce.cpp
